--- a/auto/index.html
+++ b/auto/index.html
@@ -40,6 +40,7 @@
 <nav></nav>
 
 <div id="links">
+  <li><a href="https://autogener.ru/">autogener</a></li>
   <li><a href="https://modelist-konstruktor.com/razrabotki/samyj-bezopasnyj-avtomobil">Самый безопасный автомобиль</a></li>
   <li><a href="https://edrom.ru/">Автоматический поиск объявлений - edrom</a></li>
   <li><a href="https://haraba.ru/">Весь бизнес перекупа в одном сервисе - haraba</a></li>
@@ -59,6 +60,7 @@
 судебных приставов</a></li>
   <li><a href="https://xn--90adear.xn--p1ai/check/auto#">ГИБДД</a></li>
   <a href="https://checkperson.ru/check_car_owner">Проверка владельца автомобиля</a><br>
+  <a href="https://www.youtube.com/watch?v=T2EeBRLOANI">от ржавчины</a><br>
 </div>
 
 <div>
