--- a/delo/index.html
+++ b/delo/index.html
@@ -36,22 +36,23 @@
   <li><a href="https://www.insales.ru/blogs/university">InSales</a></li>
   <li><a href="https://rosreestr.gov.ru/">РосРеестр</a></li>
   <li><a href="https://mofmicro.ru/ru/">Мой бизнес микрозаймы для вашего бизнеса</a></li>
-  <li><a href="https://yewtu.be/watch?v=4q5sIAlHcyU">Мышление успешных людей. Брайан Трейси.</a></li>
+  <li><a href="https://y.com.sb/playlist?list=PLwNIgY4FHQEzFr9BWwidNvga3BoC3Y3x9">Код Успеха. Брайан Трейси.</a></li>
+  <li><a href="https://seller.ozon.ru/partners/">seller.ozon.ru/partners</a></li>
   <li>Бизнес-стратегия. От изучения рыночной среды до выработки беспроигрышных решений. Дэвид Аакер. 2007</li>
   <li><a href="https://mbschool.ru/">Moscow Business School</a></li>
   <li><a href="https://uprav.ru/">Русская Школа Управления</a></li>
-  Стратегия продвижения.
-  Миссия у бизнеса, какую социальную ценность несет?
-  Кто мой клиент?
-  Кто мой конкурент?(аналогичн, похожие, смежные(заменяющие))
-  Какой у меня продукт?
-  Какое у меня уникально торговое предложение (УТП)
-  характеристика + преимущества + выгода (ХПВ)
-  Какие смыслы я буду транслировать моец ЦА?
-  Качественный продукт его признаки, какие проблемы закрывет.
-  Я и моя команда профессионалы, потому что...транслировать свое мнение
-  А это я, всем привет!
-  Как транслировать смыслы?
+  <br>Стратегия продвижения.
+  <br>Миссия у бизнеса, какую социальную ценность несет?
+  <br>Кто мой клиент?
+  <br>Кто мой конкурент?(аналогичн, похожие, смежные(заменяющие))
+  <br>Какой у меня продукт?
+  <br>Какое у меня уникально торговое предложение (УТП)
+  <br>характеристика + преимущества + выгода (ХПВ)
+  <br>Какие смыслы я буду транслировать моец ЦА?
+  <br>Качественный продукт его признаки, какие проблемы закрывет.
+  <br>Я и моя команда профессионалы, потому что...транслировать свое мнение
+  <br>А это я, всем привет!
+  <br>Как транслировать смыслы?
 
 </div>
 
@@ -65,6 +66,8 @@
 
 <div>
   <h2>Дела бумажные</h2>
+  <li><a href="https://assistentus.ru/forma/dogovor-na-razrabotku-sajta/">Договор на разработку сайта</a></li>
+  <li><a href="https://journal.tinkoff.ru/digital-docs/">Как агентству и фрилансеру защитить свою работу</a></li>
   <li><a href="https://tensor.ru/uc/ep/kep#:~:text=%D0%A3%D1%81%D0%B8%D0%BB%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F%20%D0%BA%D0%B2%D0%B0%D0%BB%D0%B8%D1%84%D0%B8%D1%86%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%B0%D1%8F%20%D1%8D%D0%BB%D0%B5%D0%BA%D1%82%D1%80%D0%BE%D0%BD%D0%BD%D0%B0%D1%8F%20%D0%BF%D0%BE%D0%B4%D0%BF%D0%B8%D1%81%D1%8C%20(%D0%9A%D0%AD%D0%9F,%D0%A4%D0%97%20%D0%BE%D1%82%2006.04.2011).">Квалифицированная подпись — где использовать и как получить</a></li>
   <li><a href="http://www.consultant.ru/document/cons_doc_LAW_8743/">Федеральный закон от 26.12.1995 N 208-ФЗ (ред. от 25.02.2022) "Об акционерных обществах"</a></li>
   <li><a href="https://www.moedelo.org/">Моё дело</a></li>
@@ -74,6 +77,8 @@
   <li><a href="https://data.nalog.ru/create_business/ul/creation/">nalog.ru/create_business</a></li>
   <li><a href="https://yewtu.be/channel/UCPoUX9fdqATQG7VVPiSzCiA">Переводчик с бухгалтерского</a></li>
   <li><a href="https://tube.cthd.icu/channel/UCuHMA6ZFJtYQpbfNAGPOKTQ">Некторов, Савельев и Партнеры</a></li>
+  <li><a href="https://y.com.sb/channel/UCIWQsGUKCIAicDwGrci35SA">Легальная оптимизация налогов с Дмитрием Шумейко</a></li>
+  <li><a href="https://y.com.sb/channel/UCaaHuXMWlfygTzh91-Ba9Ig">Юридические рекомендации для бизнеса</a></li>
   <br>
   <li>Банки под санкциями<ul>
     <li>Открытие(100% госуд)</li>
@@ -87,10 +92,10 @@
     <li>Промсвязьбанк</li>
     <li>банк Россия</li>
     <li>ВЭБ</li>
+    <li>Сбер</li>
   </ul></li>
   <li>Банки не под санкциями
     <ul>
-      <li>Сбер</li>
       <li>Райффайзен</li>
       <li>Росбанк</li>
       <li>ЮниКредитБанк</li>
@@ -129,6 +134,7 @@
 
 <div>
   <h2>Marketplaces</h2>
+  <li><a href="https://y.com.sb/channel/UCJ5GIk9u1PE6IPDTwXmCimw">MarketGuru - Сервис аналитики продаж маркетплейсов</a></li>
   <li><a href="https://seller-edu.ozon.ru/docs/rfbs/">Ozon Продажа со своего склада (realFBS)</a></li>
   <li><a href="https://www.livemaster.ru/">Ярмарка Мастеров</a></li>
   <li><a href="https://seller-edu.ozon.ru/docs/contract-for-sellers/contract-for-sell-goods-on-ozon.html#%D1%80%D0%B0%D0%B7%D0%B4%D0%B5%D0%BB-%C2%AB%D1%82%D1%80%D0%B5%D0%B1%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-%D0%BA-%D1%82%D0%BE%D0%B2%D0%B0%D1%80%D1%83%C2%BB">contract-for-sell-goods-on-ozon</a></li>
@@ -140,6 +146,13 @@
 
 <div>
   <h2>Реклама</h2>
+  <li>Соцсети</li>
+  <li>Фриланс биржы - Быстрый макет</li>
+  <li>Аудит сайта</li>
+  <li>2gis - компании без сайтов</li>
+  <li></li>
+  <li></li>
+  <li></li>
   <li><a href="https://target.my.com/">myTarget</a></li>
   <li><a href="https://direct.yandex.ru/">direct.yandex</a></li>
   <li><a href="https://vk.com/ads">vk.com/ads</a></li>
@@ -148,7 +161,21 @@
   <li><a href="https://online.slems.ru/cms/system/login">Т.У.З.И.Р.</a></li>
   <li><a href="https://yandex.ru/adv/edu/online/direct">Школа Директа</a></li>
   <li><a href="https://tilda.education/articles-how-to-use-utm-url">Зачем нужны UTM-метки и как их использовать</a></li>
-  Чек-листы: ▶️ 15 убойных лид-магнитов - https://clck.ru/ebxon ▶️ Формула лендинга «4 почему» - https://clck.ru/ebxoR ▶️ Чек-лист перед запуском РК в таргетинге - https://clck.ru/ebxkC ▶️ Продающая формула AIDA - https://clck.ru/ebxrG
+  Чек-листы:<ul>
+  <li>▶️ <a href="https://clck.ru/ebxon">15 убойных лид-магнитов</a></li>
+  <li>▶️ <a href="https://clck.ru/ebxoR">Формула лендинга «4 почему»</a></li>
+  <li>▶️ <a href="https://clck.ru/ebxkC">Чек-лист перед запуском РК в таргетинге</a></li>
+  <li>▶️ <a href="https://clck.ru/ebxrG">Продающая формула AIDA</a></li>
+  </ul>
+  <li>Какую проблему решает?</li>
+  <li>Чего хочет?</li>
+  <li>Чего боится?</li>
+  <li>Что предлагается?</li>
+  <li>Для кого?</li>
+  <li>Преимущества</li>
+  <li>Доказательства</li>
+  <li><a href="https://tilda.education/articles-how-to-write-text-for-website">Как рассказать о бизнесе живо и с пользой</a></li>
+  <li><a href="https://blog.cybermarketing.ru/tekst-dlya-sajta-kakim-on-dolzhen-byt/">Текст для сайта: каким он должен быть</a></li>
 </div>
 
 <div>
@@ -158,8 +185,6 @@
   <li><a href="https://boxberry.ru/">boxberry</a></li>
   <li>lomond бумага самоклеющаяся а4</li>
   <li><a href="https://www.komus.ru/katalog/upakovka-i-markirovka/korobki-kartonnye/gofrokarton-listovoj-i-v-rulonakh/karton-listovoj-buryj-gofrokarton-400kh600-mm-t-21-profil-v/p/1155871/">Картон листовой бурый (гофрокартон) 400х600 мм Т-21 профиль В</a></li>
-  <li><a href="https://www.komus.ru/katalog/upakovka-i-markirovka/-plenka-strejch-upakovochnaya/plenka-strejch-dlya-ruchnoj-upakovki/strejch-plenka-bagazhnaya-dlya-ruchnoj-upakovki-unibob-ves-0-23-kg-20-mkm-x-25-sm-kh-50-m/p/854632/?from=block-301-1">Стрейч-пленка багажная для ручной упаковки Unibob вес 0.23 кг 20 мкм x 25 см х 50 м</a></li>
-  <li><a href="https://www.dns-shop.ru/product/2da9066478853332/mfu-strujnoe-hp-deskjet-2320-all-in-one/">МФУ струйное HP DeskJet 2320 All-in-One</a></li>
 </div>
 
 <div>
