--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@ margin-bottom: .5rem;
     <td><a href="guitar/" title="Guitar"><img src="icons/guitar.png" alt="guitar"></a></td>
     <td><a href="guitar/"> Гитара</a></td></tr>
   <tr>
+    <td><a href="music/" title="Музыка"><img src="" alt=""></a></td>
+    <td><a href="music/"> Музыка</a></td></tr>
+  <tr>
     <td><a href="13century/" title="13century"><img src="icons/medieval.png" alt="13century"></a></td>
     <td><a href="13century/"> 13й Век</a></td></tr>
   <tr>
