--- a/music/index.html
+++ b/music/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Description" content="">
-	<title>Title</title>
+	<title>Музыка</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/style.css">
   <link rel="manifest" href="../manifest.webmanifest">
@@ -19,16 +19,27 @@
 <header>
   <div id="headerMenu">
     <div class="logo"><a href="../" title="Home"><img src="../icons/favicon.ico" alt="home"></a></div>
-    <div><a>Title</a></div>
+    <div><a>Музыка</a></div>
   </div>
 </header>
 
 <main class="flex">
 
-<nav></nav>
+<!-- <nav></nav> -->
 
-<div id="links"></div>
+<div>
+	<a style="width:100%" href="https://yewtu.be/watch?v=VOBkbW2gRRU">
+    <img src="https://yewtu.be/vi/VOBkbW2gRRU/mqdefault.jpg">
+  </a>
+  <p>Китайский музыкальный инструмент "Гуцинь"</p>
+</div>
 
+<div>
+	<a href="https://yewtu.be/watch?v=4kFTRTh8JkU">
+		<img src="https://yewtu.be/vi/4kFTRTh8JkU/mqdefault.jpg">
+	</a>
+	<p>Старинный струнный инструмент Цитра. Playing zither.</p>
+</div>
 
 </main>
 
