--- a/sailing/index.html
+++ b/sailing/index.html
@@ -287,6 +287,7 @@ Velux 5 Oceans Race <br>
 </div>
 
 <div>
+<a href="https://jackboat.ru/catalog/stilizatsii-lodok/korabl-gollandec/">jackboat.ru</a><br>
 <a href="http://www.5.5class.org" title="9,5-10m 26,5-32m² 1.7-2.3t 1949">5.5 Metre</a><br>
 <a title="8,9м 27,7m² 1.7t, 193х">Dragon</a><br>
 <a title="5,5m 18,5m² 450-570kg , 196*">Micro</a><br>
