--- a/wood/index.html
+++ b/wood/index.html
@@ -17,14 +17,17 @@
 <body>
 
 <header>
-  <div id="headerMenu"></div>
+  <div id="headerMenu">
+    <div class="logo"><a href="../" title="Home"><img src="../icons/favicon.ico" alt="home"></a></div>
+    <div><a>Деревообработка</a></div>
+  </div>
 </header>
 
 <main class="flex">
 
 <nav></nav>
 
-<div id="links"></div>
+<div id="links">в разработке</div>
 
 
 </main>
