--- a/zdorovie/index.html
+++ b/zdorovie/index.html
@@ -52,6 +52,7 @@
   <a href="https://youtu.be/m03nxiRUJH4">ТЕОРИИ РОСТА МЫШЦ</a><br>
   <a href="https://youtu.be/doMEYcInm68">КРОССФИТ</a><br>
   <a href="https://youtu.be/-4HNUNzEVMU">ПОСЛЕ ТРАВМЫ связок и суставов. ЛЕЧЕНИЕ.</a><br>
+  <a href="https://y.com.sb/channel/UCzkEAVCqxOGS_cyWEPlk7xg">Малышева Татьяна Алексеевна, врач акушер-гинеколог</a><br>
 </div>
 
 <div>
