--- a/programming/ui_design.html
+++ b/programming/ui_design.html
@@ -1,18 +1,34 @@
-<div id="pageTitle">title</div>
+<div id="pageTitle">Веб Дизайн</div>
 <div id="pageLogo"></div>
 
 <div>
-	<h2>фотохостинги</h2>
-	<li><a href="https://postimg.cc/">postimg.cc</a></li>
-	<li><a href="http://www.fotolink.su/">fotolink.su</a></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
 	<li></li>
 	<li></li>
 </div>
 
 <div>
+	<h2>фотохостинги</h2>
+	<li><a href="https://postimg.cc/">postimg.cc</a></li>
+	<li><a href="http://www.fotolink.su/">fotolink.su</a></li>
+</div>
+<div>
+	<h3>Шрифты</h3>
+	<li><a href="https://vk.com/ru_fonts">ru_fonts</a></li>
+	<li><a href="https://vk.com/shrift">shrift</a></li>
+	<li><a href="https://fonts-online.ru/">Шрифты Онлайн</a></li>
+	<li><a href="https://allfont.ru/">allfont</a></li>
+	<li><a href="https://anatolykulikov.ru/review/glyphhanger-tool-to-optimize-fonts/">glyphhanger-tool-to-optimize-fonts</a></li>
+	<li><a href="https://github.com/bramstein/homebrew-webfonttools">homebrew-webfonttools</a></li>
+</div>
+
+<div>
 	<h2>design / Верстка</h2>
 	<ul>
-		<li><a href="https://madeontilda.ru/">madeontilda</a></li>
 		capture a window on Mac (Shift, Command, 4, and Space bar)
 		<li><a href="https://ofont.ru/">ofont.ru</a></li>
 		<li><a href="https://material-ui.com">Material-UI</a></li>
@@ -24,33 +40,42 @@
 		<li><a href="https://thenounproject.com/">theNounProject</a></li>
 		<li><a href="https://loading.io/">loading.io</a></li>
 		<li><a href="https://www.microsoft.com/design/">Microsoft design</a></li>
-		<li><a href="https://anatolykulikov.ru/review/glyphhanger-tool-to-optimize-fonts/">glyphhanger-tool-to-optimize-fonts</a></li>
-		<li><a href="https://github.com/bramstein/homebrew-webfonttools">homebrew-webfonttools</a></li>
 		<li>Axure - проектирование прототипа сайта/приложения</li>
 		<li><a href="https://www.gimp.org/">gimp.org</a></li>
 		<li><a href="https://www.figma.com"><img src="https://static.figma.com/app/icon/1/favicon.png" alt="figma"> figma.com</a> <span style="color: rgba(0,0,0,0);">1stepnoi</span> <a href="https://htmlacademy.ru/blog/useful/image/figma">Старт в Figma для верстальщика</a></li>
 		<li>AdobeXD</li>
-		<li><a href="https://dribbble.com/">dribbble</a></li>
-		<li><a href="https://onepagelove.com/">onepagelove</a></li>
-		<li><a href="https://land-book.com/">land-book</a></li>
-		<li><a href="https://www.awwwards.com/"><img src="https://www.awwwards.com/favicon.ico" alt="awwwards"> awwwards.com</a></li>
 		<li><a href="http://www.cssdsgn.com"><img src="https://www.cssdsgn.com/icons/favicon-32x32.png" alt="cssdsgn"> cssdsgn.com</a></li>
 		<li><a href="http://www.unsplash.com"><img src="https://unsplash.com/favicon-16x16.png" alt="unsplash"> unsplash.com</a></li>
 		<li><a href="https://www.flaticon.com">flaticon</a></li>
 		<li><a href="https://icons8.com"><img src="https://photos.icons8.com/vue-static/moose/favs/favicon.ico" alt="icons8"> icons8.com</a></li>
 		<li><a href="https://unicode-table.com/">Таблица символов Юникода</a></li>
-		<li><a href="https://dribbble.com/search?q=cards">dribbble.com</a></li>
 		<li><a href="https://coolors.co">coolors.co</a></li>
 		<li><a href="https://color.adobe.com">color.adobe.com</a></li>
 		<li><a href="https://clrs.cc">clrs.cc</a></li>
 		<li><a href="https://flatuicolors.com">flatuicolors.com</a></li>
 		<li><a href="https://colordrop.io">colordrop.io</a></li>
 		<li><a href="https://www.webfx.com/web-design/color-picker/">color-picker</a></li>
-		<li><img src="https://static.tildacdn.com/img/tildafavicon.ico" alt="tilda"> <a href="https://tilda.cc/ru/">tilda.cc</a></li>
 	</ul>
 </div>
 
 <div>
+	<h3>Tilda</h3>
+	<li><img src="https://static.tildacdn.com/img/tildafavicon.ico" alt="tilda"> <a href="https://tilda.cc/ru/">tilda.cc</a></li>
+	<li><a href="https://madeontilda.ru/">madeontilda</a></li>
+	<a href="https://tilda.cc/ru/madeontilda/#c=portfolio">Примеры дизайнов на тильде</a><br>
+</div>
+
+<div>
+	behance
+	<li><a href="https://dribbble.com/">dribbble</a></li>
+	<li><a href="https://dribbble.com/search?q=cards">dribbble.com</a></li>
+	<li><a href="https://onepagelove.com/">onepagelove</a></li>
+	<li><a href="https://land-book.com/">land-book</a></li>
+	<li><a href="https://www.awwwards.com/"><img src="https://www.awwwards.com/favicon.ico" alt="awwwards"> awwwards.com</a></li>
+</div>
+
+<div>
+	<h3>Примеры</h3>
 	<a href="https://veryberry.com.ua">veryberry.com.ua</a><br>
 	<a href="https://www.nitrousa.com">nitrousa.com</a><br>
 	<a href="https://www.svo.aero/">svo.aero</a><br>
@@ -62,6 +87,5 @@
 	<a href="https://red-look.ru/works/">red-look</a><br>
 	<a href="https://embedika.ru/">embedika</a><br>
 	<a href="https://hsworld.ru/systems">hsworld.ru</a><br>
-	<a href="https://tilda.cc/ru/madeontilda/#c=portfolio">Примеры дизайнов на тильде</a><br>
 	<a href="https://ledovskikh-pl.ru/">primer1</a> , <a href="http://kseniabelovaphoto.tilda.ws/"> primer2</a><br>
 </div>
