--- a/steam/index.html
+++ b/steam/index.html
@@ -17,7 +17,10 @@
 <body>
 
 <header>
-  <div id="headerMenu"></div>
+  <div id="headerMenu">
+    <div class="logo"><a href="../" title="Home"><img src="../icons/favicon.ico" alt="home"></a></div>
+    <div><a>Паровые технологии</a></div>
+  </div>
 </header>
 
 <main class="flex">
